--- a/views/home.pug
+++ b/views/home.pug
@@ -6,13 +6,11 @@ html
 title 
 
 main
-  h1.title.home-title.container Choose Your Own Adventure
+  h1.title.home-title.container world guessr
 
 body.container.home-background
   nav.home-nav
     ul
-      li
-        a(href="/game") Play
       li 
       a(href="/maps") maps
       li 
