modified:   app.js 	new file:   package-lock.json 	new file:   package.json 	new file:   public/getJSONData.js 	new file:   public/maps-inline.js 	modified:   public/maps.js 	new file:   public/putJSONData.js 	new file:   views/getAndDisplayJSON.html 	modified:   views/index.pug 	modified:   views/maps.pug 	new file:   views/putJSONData.html

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ html
 title Login Page
 
 main
-  h1.title.main-title.container Choose Your Own Adventure
+  h1.title.main-title.container world guessr
 
 body.container.background
   nav.main-nav
