modified:   app.mjs 	new file:   public/games.js 	modified:   public/getJSONData.js 	modified:   public/maps.js 	modified:   public/putJSONData.js 	new file:   views/games.pug 	modified:   views/home.pug 	modified:   views/index.pug 	modified:   views/login.pug 	modified:   views/maps.pug 	modified:   views/register.pug 	modified:   views/styles.css

--- a/views/home.pug
+++ b/views/home.pug
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 html
   head
     style 
@@ -12,7 +13,7 @@ body.container.home-background
   nav.home-nav
     ul
       li 
-      a(href="/maps") maps
+      a(href="/games") games
       li 
         a() Settings 
       li
