--- a/views/register.pug
+++ b/views/register.pug
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 html
   head
     style 
@@ -18,3 +19,9 @@ html
         input#email(type="email", name="email")
       .input
         input#submit(type="submit", value="Submit")
+
+    ul
+      li
+        a#submit(href='/') Landing Page
+      li
+        a#submit(href='/login') Login
