--- a/views/login.pug
+++ b/views/login.pug
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 html
   head
     style
@@ -17,3 +18,9 @@ html
         input#submit(type="submit", value="Submit")
     <script src="getJSONData.js"></script>
     <script src="putJSONData.js"></script>
+
+    ul
+      li
+        a#submit(href='/') Landing Page
+      li
+        a#submit(href='/register') Register
