--- a/views/maps.pug
+++ b/views/maps.pug
@@ -1,11 +1,23 @@
+<!DOCTYPE html>
 html
   head
+    style 
+      include styles.css
     title Google Maps Integration
-    link(rel="stylesheet" href="/styles.css")
+
+
   body
     h1 Google Maps with Street View
     #pano(style="height: 800px; width: 100%; margin-top: 10px;")
 
-    // Load JavaScript files (in correct order)
+    // Modal HTML
+    #mapModal.modal
+      .modal-content
+        span.close &times;
+        #map(style="height: 300px; width: 100%;")
+
+    // Trigger Modal Open Button
+    button#openModalButton Open Map Modal
+
+    // Load Google Maps API dynamically (handled in maps.js)
     script(src="/maps.js")
-    script(src="/maps-inline.js")
