modified:   app.mjs 	modified:   public/maps.js 	modified:   views/error.pug 	modified:   views/games.pug 	modified:   views/getAndDisplayJSON.html 	modified:   views/home.pug 	modified:   views/login.pug 	modified:   views/maps.pug 	modified:   views/putJSONData.html 	modified:   views/register.pug

--- a/views/putJSONData.html
+++ b/views/putJSONData.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- page for putJSON from Professor Toporski-->
 <html lang="en">
 <head>
   <title>Submit JSON Data to JSONBin</title>
