--- a/views/register.pug
+++ b/views/register.pug
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+//- form to take in username, password, and email
 html
   head
     style 
@@ -7,6 +8,7 @@ html
   main
     h1.title.container.form-title Create Your Account
   body.form-background
+  
     form.form-container(method="POST")
       .input
         label.label(for="Username") Username
