--- a/views/games.pug
+++ b/views/games.pug
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+//-page for game select
 html
   head
     style 
@@ -12,7 +13,7 @@ html
         li 
           a(href="/home") home
     main
-      h1 Games List
+      h1.form-title Games List
       nav.home-nav
         ul(id="games-list")
           each game in games
