modified:   app.mjs 	new file:   public/create.js 	modified:   public/games.js 	new file:   views/create.pug 	modified:   views/home.pug

--- a/views/home.pug
+++ b/views/home.pug
@@ -16,6 +16,8 @@ body.container.home-background
       li 
       a(href="/games") games
       li 
+      a(href="/create") create
+      li 
         a() Settings 
       li
         a() LeaderBoard 
