modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -8,6 +8,8 @@ html
 
 
   body
+    #pano(style="height: 800px; width: 100%; margin-top: 5px;")
+
     //- Modal HTML
     #mapModal.modal
       .modal-content
