modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -8,7 +8,7 @@ html
 
 
   body
-    #pano(style="height: 800px; width: 100%; margin-top: 5px;")
+    #pano(style="height: 800px; width: 100%;")
 
     //- Modal HTML
     #mapModal.modal
