--- a/views/create.pug
+++ b/views/create.pug
@@ -8,7 +8,10 @@ html
 
 
   body
-    #pano(style="height: 800px; width: 100%;")
+    #pano(style="position: absolute; 
+    top: 40px;
+    bottom: 20px; 
+    width: 100%;")
 
     //- Modal HTML
     #mapModal.modal
