--- a/views/create.pug
+++ b/views/create.pug
@@ -8,10 +8,7 @@ html
 
 
   body
-    #pano(style="position: absolute; 
-    top: 40px;
-    bottom: 20px; 
-    width: 100%;")
+    #pano(style="position: absolute; top: 40px; bottom: 20px; width: 100%;")
 
     //- Modal HTML
     #mapModal.modal
