--- a/views/create.pug
+++ b/views/create.pug
@@ -14,7 +14,7 @@ html
     #mapModal.modal
       .modal-content
         span.close &times;
-        #map(style="position: absolute; top: 40px; bottom: 20px; z-index: 2500000")
+        #map(style="position: relative; top: 40px; bottom: 20px; z-index: 2500000")
 
     //- Trigger Modal Open Button
     button#openModalButton Open Map Modal
