--- a/views/create.pug
+++ b/views/create.pug
@@ -8,13 +8,13 @@ html
 
 
   body
-    #pano(style="position: absolute; top: 40px; bottom: 20px; width: 100%; z-index: 2;")
+    #pano(style="position: absolute; top: 40px; bottom: 20px; width: 100%; z-index: -1;")
 
     //- Modal HTML
     #mapModal.modal
       .modal-content
         span.close &times;
-        #map(style="position: relative; top: 40px; bottom: 20px; z-index: 2500000")
+        #map(style="position: relative; top: 40px; bottom: 20px; z-index: 2")
 
     //- Trigger Modal Open Button
     button#openModalButton Open Map Modal
