modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -11,7 +11,7 @@ html
     #pano(style="position: absolute; width: 100%; z-index: -1;")
 
     //- Modal HTML
-    #mapModal.modal(style="position: relative;")
+    #mapModal.modal
       .modal-content
         span.close &times;
         #map(style="position: fixed; width: 100%; margin: 0; padding: 10px; z-index: 2")
