modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -14,7 +14,7 @@ html
     #mapModal.modal
       .modal-content
         span.close &times;
-        #map(style="position: fixed; width: 100%; margin: 0; padding: 10px; z-index: 2")
+        #map(style="position: fixed; width: 100%; margin: 0; z-index: 2")
 
     //- Trigger Modal Open Button
     button#openModalButton Map 
