modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -17,7 +17,8 @@ html
         #map(style="position: fixed; width: 100%; margin: 0; z-index: 2")
 
     //- Trigger Modal Open Button
-    button#openModalButton Map 
+    button#openModalButton Map
+    button#closeModalButton Map 
 
     //- Load Google Maps API dynamically (handled in maps.js)
     script(src="/create.js")
