modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -14,7 +14,7 @@ html
     #mapModal.modal(style="position: relative;")
       .modal-content
         span.close &times;
-        #map(style="position: fixed; width: 100%; margin: 0; padding: 10px; z-index: 250")
+        #map(style="position: relative; width: 100%; margin: 0; padding: 10px; z-index: 250")
 
     //- Trigger Modal Open Button
     button#openModalButton Map
