--- a/views/create.pug
+++ b/views/create.pug
@@ -8,7 +8,7 @@ html
 
 
   body
-    #pano(style="position: absolute; width: 100%; z-index: 0")
+    #pano(style="position: absolute; width: 100%; z-index: auto")
 
     //- Modal HTML
     #mapModal.modal(style="position: relative;")
