modified:   app.mjs 	modified:   public/games.js 	modified:   public/maps.js 	modified:   views/games.pug 	modified:   views/maps.pug 	new file:   views/scores.pug

--- a/views/games.pug
+++ b/views/games.pug
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-//-page for game select
 html
   head
     style 
@@ -17,5 +15,8 @@ html
       nav.home-nav
         ul(id="games-list")
           each game in games
-            li= game._id + ': ' + game.description
+            li
+              form(action="/select-game", method="POST")
+                input(type="hidden", name="gameId", value=game._id)
+                input(type="submit", value=game._id + ': ' + game.description)
     script(src="games.js")
