modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -8,13 +8,13 @@ html
 
 
   body
-    #pano(style="position: absolute; width: 100%; z-index: auto")
+    #pano(style="position: absolute; width: 100%")
 
     //- Modal HTML
     #mapModal.modal(style="position: relative; z-index: 250")
       .modal-content
         span.close &times;
-        #map(style="position: relative; width: 100%; margin: 0; padding: 10px; z-index: 250")
+        #map(style="position: relative; width: 100%; margin: 0; padding: 10px")
 
     //- Trigger Modal Open Button
     button#openModalButton Map
