--- a/views/create.pug
+++ b/views/create.pug
@@ -11,7 +11,7 @@ html
     #pano(style="position: absolute; width: 100%")
 
     //- Modal HTML
-    #mapModal.modal(style="position: relative; z-index: 250")
+    #mapModal.modal(style="position: relative; z-index: auto")
       .modal-content
         span.close &times;
         #map(style="position: relative; width: 100%; margin: 0; padding: 10px")
