modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -12,10 +12,10 @@ html
     #pano(style="position: relative; width: 100%")
 
     //- Modal HTML
-    #mapModal.modal(style="position: absolute; z-index: 99")
+    #mapModal.modal(style="position: absolute; top: 10px; left 10px; z-index: 99")
       .modal-content
         span.close &times;
-        #map(style="position: absolute; width: 100%; margin: 0; padding: 1px")
+        #map(style="position: absolute; width: 100%; margin: 0; padding: 1px; z-index: 99")
 
     //- Trigger Modal Open Button
     button#openModalButton Map
