--- a/views/create.pug
+++ b/views/create.pug
@@ -9,7 +9,7 @@ html
 
 
   body
-    #pano(style="position: relative; width: 100%")
+    #pano(style="position: absolute; width: 100%")
 
     //- Modal HTML
     #mapModal.modal(style="position: absolute; top: 10px; left 10px; z-index: 99")
