modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -9,7 +9,7 @@ html
 
 
   body
-    #pano(style="height: 100%; width: 100%")
+    #pano(style="position: absolute; width: 100%; z-index: -1")
 
     //- Modal HTML
     #mapModal.modal(style="position: absolute; top: 10px; left 10px; z-index: 99")
