modified:   views/create.pug 	modified:   views/styles.css

--- a/views/create.pug
+++ b/views/create.pug
@@ -12,10 +12,10 @@ html
     #pano(style="position: absolute; height: 100%; width: 100%; z-index: 1")
 
     //- Modal HTML
-    #mapModal.modal(style="position: absolute; top: 10px; left 10px; z-index: 99")
+    #mapModal.modal(style="position: absolute; top: 10px; left 10px")
       .modal-content
         span.close &times;
-        #map(style="position: absolute; width: 100%; margin: 0; padding: 1px; z-index: 99")
+        #map(style="position: absolute; width: 100%; margin: 0; padding: 1px;")
 
     //- Trigger Modal Open Button
     button#openModalButton Map
