modified:   views/create.pug

--- a/views/create.pug
+++ b/views/create.pug
@@ -18,7 +18,7 @@ html
         #map(style="position: absolute; width: 100%; margin: 0; padding: 1px;")
 
     //- Trigger Modal Open Button
-    button#openModalButton Map
+    button#openModalButton(style="position: absolute;") Map
 
     //- Load Google Maps API dynamically (handled in maps.js)
     script(src="/create.js")
