--- a/views/create.pug
+++ b/views/create.pug
@@ -12,7 +12,7 @@ html
     #pano(style="position: absolute; height: 100%; width: 100%; z-index: 1")
 
     //- Modal HTML
-    #mapModal.modal(style="position: absolute; top: 10px; left 10px")
+    #mapModal.modal(style="position: absolute;")
       .modal-content
         span.close &times;
         #map(style="position: absolute; width: 100%; margin: 0; padding: 1px;")
