--- a/views/styles.css
+++ b/views/styles.css
@@ -355,6 +355,7 @@ button {
   color: white;
   border: none;
   padding: 10px;
+  padding-top: 720px;
   border-radius: 5px;
   cursor: pointer;
   z-index: 5;
