--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ html
   head
     style
       include styles.css
-  title My Website
+  title LOGIN
   main
     h1.form-title.container.title LOGIN
   body.form-background
