--- a/views/home.pug
+++ b/views/home.pug
@@ -21,3 +21,5 @@ body.container.home-background
         a() Settings 
       li
         a() LeaderBoard 
+      li 
+      a(href="/logout") logout
