--- a/views/register.pug
+++ b/views/register.pug
@@ -1,26 +1,27 @@
-<!DOCTYPE html>
-//- form to take in username, password, and email
+doctype html
 html
   head
-    style 
+    title REGISTER
+    style
       include styles.css
-  title REGISTER
-  main
-    h1.title.container.form-title Create Your Account
   body.form-background
-  
+    main
+      h1.title.container.form-title Create Your Account
     form.form-container(method="POST")
       .input
         label.label(for="Username") Username
-        input#uname(type="text", name="uname")
+        input#uname(type="text", name="uname", value=uname)
       .input
         label.label(for="Password") Password
         input#pword(type="password", name="pword")
       .input
         label.label(for="email") Email
-        input#email(type="email", name="email")
+        input#email(type="email", name="email", value=email)
       .input
         input#submit(type="submit", value="Submit")
+    if msg
+      .error
+        p= msg
 
     ul
       li
