modified:   public/maps.js 	modified:   views/maps.pug

--- a/views/maps.pug
+++ b/views/maps.pug
@@ -19,6 +19,8 @@ html
 
       button#openModalButton Open Map Modal
       <button id="submitGuess">Submit Guess</button>
+      <button id="hintButton">Hint</button>
+
     else
       p No game selected! maps.pug
     
