modified:   app.mjs 	new file:   views/about.pug 	modified:   views/home.pug 	new file:   views/settings.pug

--- a/views/home.pug
+++ b/views/home.pug
@@ -18,8 +18,10 @@ body.container.home-background
       li 
       a(href="/create") create
       li 
-        a() Settings 
+        a(href="/settings") Settings 
       li
         a() LeaderBoard 
+      li 
+        a(href="/about") About        
       li 
       a(href="/logout") logout
