modified:   views/home.pug

--- a/views/home.pug
+++ b/views/home.pug
@@ -20,7 +20,7 @@ body.container.home-background
       li 
         a(href="/settings") Settings 
       li
-        a() LeaderBoard 
+        a(href="/leaderboard") LeaderBoard 
       li 
         a(href="/about") About        
       li 
