modified:   app.mjs 	modified:   views/home.pug 	modified:   views/leaderboard.pug

--- a/views/home.pug
+++ b/views/home.pug
@@ -17,23 +17,6 @@ html(lang="en")
         color: #fff;
       }
 
-<<<<<<< HEAD
-body.container.home-background
-  nav.home-nav
-    ul
-      li 
-      a(href="/games") games
-      li 
-      a(href="/create") create
-      li 
-        a(href="/settings") Settings 
-      li
-        a(href="/leaderboard") LeaderBoard 
-      li 
-        a(href="/about") About        
-      li 
-      a(href="/logout") logout
-=======
       /* full-screen background + overlay */
       body.home-background {
         position: relative;
@@ -57,7 +40,7 @@ body.container.home-background
 
       /* neon main title slightly smaller */
       .main-title {
-        font-size: 3rem; /* down from 4rem */
+        font-size: 3rem;
         margin: 0 0 1rem;
         color: #0ff;
         text-shadow:
@@ -80,14 +63,14 @@ body.container.home-background
         margin: 0;
         display: flex;
         flex-direction: column;
-        gap: 1.2rem; /* reduced gap */
+        gap: 1.2rem;
       }
 
       /* slightly smaller buttons */
       nav.home-nav a {
         display: block;
-        padding: 1rem 2rem;   /* down from 1.5/3rem */
-        font-size: 1.1rem;    /* down from 1.5rem */
+        padding: 1rem 2rem;
+        font-size: 1.1rem;
         font-weight: bold;
         color: #000;
         background: linear-gradient(45deg, #ff0066, #ffcc00, #00ffcc, #ff0066);
@@ -132,4 +115,3 @@ body.container.home-background
           a(href='/about') About
         li
           a(href='/logout') Logout
->>>>>>> 6bbff4d7061e421cffba9ac51e23d26d480bb3f9
